--- a/README
+++ b/README
@@ -28,10 +28,11 @@ In order to you don't completely loose your click, here is my resume:
 
 	Besides the aforementioned, Pedro is the lead developer of the HLBR Project
 	(http://hlbr.sf.net), a free software initiative which aims to develop a
-	full-featured Network-based Intrusion Prevention System. Also, Pedro use to
+	full-featured Network-based Intrusion Prevention System. Also, Pedro does
 	contribute with free software projects he uses in his daily tasks through
 	coding, patching, bug reporting, and documenting.
 
 	-- cut here --
 
 Sorry for the inconvenience and may the Force be with you!
+
